--- a/views/index.html
+++ b/views/index.html
@@ -257,6 +257,8 @@ $(document).ready(function(){
             $('#signin_msg').text("Invalid Credentials")
             $('#signin_msg').fadeOut(5000)
 
+            console.log(response)
+
           }
         })
     })
