--- a/views/dash.html
+++ b/views/dash.html
@@ -436,6 +436,7 @@
       //   window.location = 'index.html'
       // }
      
+      console.log(id)
 
     $.ajax({
       url: "https://prefarmapi.herokuapp.com/api/espdata/user",
