--- a/views/dash.html
+++ b/views/dash.html
@@ -432,7 +432,7 @@
     
     var token = localStorage.getItem('access_token')
     var user_id
-    console.log(id)
+    console.log(user_id)
       // if(token == 'null'){
       //   window.location = 'index.html'
       // }
