--- a/views/dash.html
+++ b/views/dash.html
@@ -502,7 +502,7 @@
     $('#save_set').click(function (e) {
       e.preventDefault();
       $.ajax({
-        url: 'https://prefarmapi.herokuapp.com/profile_update/' + id,
+        url: 'https://prefarmapi.herokuapp.com/profile_update/' + user_id,
         method: 'patch',
         headers: {
           "Authorization": `Bearer ${token}`
