--- a/views/dash.html
+++ b/views/dash.html
@@ -431,13 +431,7 @@
   $(document).ready(function () {
     
     var token = localStorage.getItem('access_token')
-    var user_id
-      // if(token == 'null'){
-      //   window.location = 'index.html'
-      // }
-     
-      
-
+    var id
     $.ajax({
       url: "https://prefarmapi.herokuapp.com/api/espdata/user",
       method: "get",
@@ -447,7 +441,7 @@
       dataType: "json",
       success: function (response) {
         // response[0] 
-        console.log(token)
+        // console.log(token)
         $('#user_intro').html('Hi ' + response[0].firstName + ',')
         $('#profile_name').html(response[0].firstName + ' ' + response[0].surname)
         $('#profile_email').html(response[0].email)
@@ -458,50 +452,19 @@
         $("#set_sname").val(response[0].surname);
         $("#set_email").val(response[0].email);
 
-        user_id = response[0].id
-        
+        id = response[0].id
+
       },
 
       error: function (response) {
         console.log(response)
       }
     })
-
-
-    $.ajax({
-      url: 'https://prefarmapi.herokuapp.com/api/espdata/1',
-      method: "delete",
-      headers: {
-        "Authorization": `Bearer ${token}`,
-      },
-      success: function (response) {
-        console.log(response)
-      },
-      error: function (response) {
-        console.log(response)
-
-      }
-    })
-
-
-    $.ajax({
-      url: "https://prefarmapi.herokuapp.com/api/espdata",
-      method: "get",
-      headers: {
-        "Authorization": `Bearer ${token}`,
-      },
-      error: function (response) {
-        console.log(response)
-      }
-    })
-
-   
-
 
     $('#save_set').click(function (e) {
       e.preventDefault();
       $.ajax({
-        url: 'https://prefarmapi.herokuapp.com/api/espdata/profile_update/1',
+        url: 'https://prefarmapi.herokuapp.com/api/espdata/profile_update/' + id,
         method: 'patch',
         headers: {
           "Authorization": `Bearer ${token}`
@@ -573,8 +536,9 @@
         },
         dataType: 'json',
         success: function (response) {
-          window.location = "index"
+          window.location = "index.html"
           window.localStorage.setItem('access_token',null)
+          window.localStorage.setItem('user_id',null)
         }
       })
     })
