--- a/views/dash.html
+++ b/views/dash.html
@@ -536,23 +536,13 @@
         },
         dataType: 'json',
         success: function (response) {
-          window.location = "index"
+          window.location = "index.html"
           window.localStorage.setItem('access_token',null)
           window.localStorage.setItem('user_id',null)
         }
       })
     })
   });
-
-
-
-
-
-
-
-
-
-
 
 </script>
 
