--- a/views/dash.html
+++ b/views/dash.html
@@ -536,7 +536,7 @@
         },
         dataType: 'json',
         success: function (response) {
-          window.location = "index.html"
+          window.location = "/"
           window.localStorage.setItem('access_token',null)
           window.localStorage.setItem('user_id',null)
         }
